Fix table align - generate invoices

--- a/src/app/main/content/payroll/generate-payroll/generate-payroll.component.scss
+++ b/src/app/main/content/payroll/generate-payroll/generate-payroll.component.scss
@@ -52,4 +52,22 @@
             }
         }
     }
+
+    table.category-table {
+
+        td.title {
+            width: 50%;
+        }
+
+        td.amount,
+        td.quantity,
+        td.line-amount {
+            width: 14%;
+        }
+
+        td.line-menu {
+            width: 8%;
+            text-align: right;
+        }
+    }
 }
